0.13.2.AK (PRE-RELEASE):
-----------------------
- Adds "SupplyNVME" Feature
  * A built in NvmExpress driver is loaded by default to provide NVMe support if required
  * This functionality can be disabled by setting the 'decline_nvmeload' token
- Fixes Display of Mac Recovery Tool Name in RELEASE builds
  * The variable holding the Mac Recovery tool name was wrapped in "Debug" tags
  * Hence the tool name was not displayed in RELEASE builds
- Initial fixes on Mac Recovery For Mac OS 11 (Big Sur) and Later
  * The Mac Recovery implementation inherited by RefindPlus was designed for the HFS+ filesystem
  * Hence, it does not recognise recovery volumes of Mac OS versions with full APFS implementation
    - Mac OS 10.13 (High Sierra) to Mac OS 10.15 (Catalina) have partial/transitional APFS implementations
    - Mac OS 11 (Big Sur) and newer have full APFS implementations
  * ADDITIONAL NOTES:
    - This implementation does not support setups with more than one APFS instance in a single container
    - This implementation is still a work in progress
- Fixes Compilation Issue on Recent GNU-EFI Versions
  * Synced with upstream update as well as an existing issue with 'REFIT_CALL_X_WRAPPER'
  * GNU-EFI compilation of RefindPlus is likely broken overall
- Fixes 'TagsHelp' Feature
  * Was inverted ... active when decline_tagshelp was set and vice versa after renaming the feature
  * This bug was introduced in v0.13.2.AH (Commit 1b043c3)
- Fixes Failure to Set Volume Badges and .VolumeIcon files on APFS Volumes
  * The items were skipped by optimisation meant to only skip such on APFS System Volumes for SyncAPFS
  * This bug was introduced in v0.13.2.AH (Commit d87d3fb)
- Fixes Memory Management
  * The 'MyFreePool' function implementation did not actually free items passed
  * Similarly, the 'ReleasePtr' function that called this was non operational
  * This affected the operation of various elements across the board