@@ -2074,6 +2074,10 @@ VOID ScanExtendedPartition (
 // Check for Multi-Instance APFS Containers
 static
 VOID VetMultiInstanceAPFS (VOID) {
+// DA-TAG: Disable until release of New Mac Recovery
+//         Keep function as useful for future other APFS items
+return;
+#if 0
     EFI_STATUS                     Status;
     UINTN                            i, j;
     BOOLEAN               ActiveContainer;
@@ -2081,10 +2085,6 @@ VOID VetMultiInstanceAPFS (VOID) {
     EFI_GUID                ContainerGuid;
     APPLE_APFS_VOLUME_ROLE VolumeRole = 0;
 
-// DA-TAG: Disable until release of New Mac Recovery
-//         Keep function as useful for future other APFS items
-return;
-#if 0
     #if REFIT_DEBUG > 0
     CHAR16 *MsgStrA       = NULL;
     CHAR16 *MsgStrB       = L"Disabled Recovery Tool for Mac OS 11 and Later (If Present)";
